--- a/DragonSlayer/DragonSlayer.csproj
+++ b/DragonSlayer/DragonSlayer.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\ColorChange\ColorChange\ColorChange.csproj" />
+  </ItemGroup>
+
 </Project>
