--- a/DragonSlayer/DragonSlayer.csproj
+++ b/DragonSlayer/DragonSlayer.csproj
@@ -11,4 +11,10 @@
     <ProjectReference Include="..\..\..\ColorChange\ColorChange\ColorChange.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="ColorChange">
+      <HintPath>..\..\..\ColorChange\ColorChange\bin\Debug\net8.0\ColorChange.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
