--- a/DragonSlayer/DragonSlayer.csproj
+++ b/DragonSlayer/DragonSlayer.csproj
@@ -8,12 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\ColorChange\ColorChange\ColorChange.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Reference Include="ColorChange">
-      <HintPath>..\..\..\ColorChange\ColorChange\bin\Debug\net8.0\ColorChange.dll</HintPath>
+      <HintPath>..\..\..\..\OneDrive\Desktop\ColorChange.dll</HintPath>
     </Reference>
   </ItemGroup>
 
